syntax = "proto3";

package caraml.upi.v1;

import "caraml/upi/v1/type.proto";


// Table represents a 2D data structure that has one or more columns 
// with potentially different types
message Table {
    // Table's name
    string name = 1;
    // Columns stores schema informations of all columns in the table.
    repeated Column columns = 2;
    // Rows stores list of row values in the table.
    repeated Row rows = 3;
}

// Column represent a column definition within a table
message Column {
    // Column's name
    string name = 1;
    // Column's type
    Type type = 2;
}

// Row represents list of value stored within a row of a table
message Row {
    // Id of the particular row in a table.
    // The row id should be at least locally unique within the table.
    // Row ID must be populated for prediction_table 
    string row_id = 1;

    // List of values within a row. 
    // It is table's creator responsibility to ensure that the number of entry 
    // values matches with the length of columns in the table.
    repeated Value values = 2;
}

// Value of a cell within a table. Value is nullable.
message Value {
    // One of following field will be set depending on the column's type 
    double double_value = 1;
    int64 integer_value = 2;
    string string_value = 3;

    // Flag to be used to signify that the value is null
    bool is_null = 10;
}
 